--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -6,10 +6,11 @@ name: CICD Pipeline
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "development" ]
+    #branches: [ "development" ]
+    - '*'
   pull_request:
-    branches: [ "development" ]
-
+    #branches: [ "development" ]
+    - '*'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
