--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -15,7 +15,7 @@ on:
   workflow_dispatch:
 
 env:
-  EnvironmentName: ${{ vars.ENVIRONMENTNAME }}
+  env_name: 'Joepie' # ${{ vars.ENVIRONMENTNAME }}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -31,7 +31,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo "Environment name: $EnvironmentName"
+        run: echo "Environment name: $EnvironmentName "
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
