--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -31,7 +31,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo "Environment name: $EnvironmentName "
+        run: echo "Environment name $env_name" 
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
