--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -4,14 +4,12 @@ name: CICD Pipeline
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    #branches: [ "development" ]
-    - '*'
+    branches: 
+      - development
   pull_request:
-    #branches: [ "development" ]
-    - '*'
-  # Allows you to run this workflow manually from the Actions tab
+    branches: 
+      - development
   workflow_dispatch:
 
 env:
