--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -7,9 +7,11 @@ on:
   push:
     branches: 
       - development
+      - a_feature
   pull_request:
     branches: 
       - development
+      - a_feature
   workflow_dispatch:
 
 env:
