--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -30,7 +30,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo "Environment name $env_name" 
+        run: echo "Environment name *${{ vars.ENVIRONMENTNAME }}*" 
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
