--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -30,7 +30,10 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo "Environment name *${{ vars.ENVIRONMENTNAME }}*" 
+        run: echo "Environment name ENVIRONMENTNAME *${{ vars.ENVIRONMENTNAME }}*" 
+
+      - name: Run a one-line script
+        run: echo "Environment name VNAME *${{ vars.VNAME }}*" 
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
