--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Run a one-line script
         run: echo "Environment name VNAME *${{ vars.VNAME }}*" 
 
+      - name: Run a one-line script
+        run: echo "Environment name ASECRET *${{ secrets.ASECRET }}*" 
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
