--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -29,14 +29,17 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo "Environment name ENVIRONMENTNAME *${{ vars.ENVIRONMENTNAME }}*" 
+      - name: Echoing env_name
+        run: echo "Echoing ENVIRONMENTNAME * ${{ vars.ENVIRONMENTNAME }} *" 
 
-      - name: Run a one-line script
-        run: echo "Environment name VNAME *${{ vars.VNAME }}*" 
+      - name: Echoing ENVIRONMENTNAME
+        run: echo "Echoing ENVIRONMENTNAME * ${{ vars.ENVIRONMENTNAME }} *" 
 
-      - name: Run a one-line script
-        run: echo "Environment name ASECRET *${{ secrets.ASECRET }}*" 
+      - name: Echoing VNAME
+        run: echo "Echoing VNAME * ${{ vars.VNAME }} *" 
+
+      - name: Echoing ASECRET
+        run: echo "Echoing ASECRET * ${{ secrets.ASECRET }} *" 
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
