--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -28,18 +28,13 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Echoing env_name
-        run: echo "Echoing ENVIRONMENTNAME * ${{ vars.ENVIRONMENTNAME }} *" 
-
-      - name: Echoing ENVIRONMENTNAME
-        run: echo "Echoing ENVIRONMENTNAME * ${{ vars.ENVIRONMENTNAME }} *" 
-
-      - name: Echoing VNAME
-        run: echo "Echoing VNAME * ${{ vars.VNAME }} *" 
-
-      - name: Echoing ASECRET
-        run: echo "Echoing ASECRET * ${{ secrets.ASECRET }} *" 
+      - name: Echoing variables
+        run: |
+          echo Echoing GITHUB_REPOSITORY * ${{ vars.GITHUB_REPOSITORY }} * 
+          echo Echoing env_name * ${{ vars.env_name }} * 
+          echo "Echoing ENVIRONMENTNAME * ${{ vars.ENVIRONMENTNAME }} *" 
+          echo "Echoing VNAME * ${{ vars.VNAME }} *" 
+          echo "Echoing ASECRET * ${{ secrets.ASECRET }} *" 
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
