--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -23,7 +23,8 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    job_variable: "job value"  
+    env:
+      job_variable: "job value"  
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -31,7 +32,8 @@ jobs:
       #- uses: actions/checkout@v3
 
       - name: Echoing variables
-        step_variable: "step value"  
+        env:
+          step_variable: "step value"  
         run: |
           echo Echoing workflow_variable * $workflow_variable *
           echo Echoing job_variable * $job_variable * 
