--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -41,11 +41,11 @@ jobs:
 
       - name: Echoing github context variables
         run: |
-          echo Echoing github.action * {{ github.action }}} *
-          echo Echoing github.action_path * {{ github.action_path }}} *
-          echo Echoing github.actor * {{ github.actor }}} *
-          echo Echoing github.base_ref * {{ github.base_ref }}} *
-          echo Echoing github.ref * {{ github.ref }}} *
+          echo Echoing github.action * {{ github.action }} *
+          echo Echoing github.action_path * {{ github.action_path }} *
+          echo Echoing github.actor * {{ github.actor }} *
+          echo Echoing github.base_ref * {{ github.base_ref }} *
+          echo Echoing github.ref * {{ github.ref }} *
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
