--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -18,10 +18,12 @@ env:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  
   # This workflow contains a single job called "build"
-  build:
+  Development:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    environment: Development
 
     env:
       job_variable: "job value"  
@@ -50,20 +52,20 @@ jobs:
 
       - name: Echoing vars context variables
         run: |
-          echo Echoing vars.VNAME * ${{ vars.VNAME }} *
+          echo Echoing vars.AVARIABLE * ${{ vars.AVARIABLE }} *
           echo Echoing vars.ASECRET * ${{ vars.ASECRET }} *
 
       - name: Echoing vars context variables via env
         env:
-          VNAME: ${{ vars.VNAME }}
+          VNAME: ${{ vars.AVARIABLE }}
           ASECRET: ${{ vars.ASECRET }}
         run: |
-          echo Echoing vars.VNAME * $VNAME *
+          echo Echoing vars.AVARIABLE * $AVARIABLE *
           echo Echoing vars.ASECRET * $ASECRET *
 
       - name: Echoing secrets context variables
         run: |
-          echo Echoing secrets.VNAME * ${{ secrets.VNAME }} *
+          echo Echoing secrets.AVARIABLE * ${{ secrets.AVARIABLE }} *
           echo Echoing secrets.ASECRET * ${{ secrets.ASECRET }} *
 
       # Runs a set of commands using the runners shell
