--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -53,23 +53,50 @@ jobs:
       - name: Echoing vars context variables
         run: |
           echo Echoing vars.AVARIABLE * ${{ vars.AVARIABLE }} *
-          echo Echoing vars.ASECRET * ${{ vars.ASECRET }} *
-
-      - name: Echoing vars context variables via env
-        env:
-          VNAME: ${{ vars.AVARIABLE }}
-          ASECRET: ${{ vars.ASECRET }}
-        run: |
-          echo Echoing vars.AVARIABLE * $AVARIABLE *
-          echo Echoing vars.ASECRET * $ASECRET *
 
       - name: Echoing secrets context variables
         run: |
-          echo Echoing secrets.AVARIABLE * ${{ secrets.AVARIABLE }} *
           echo Echoing secrets.ASECRET * ${{ secrets.ASECRET }} *
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+
+  Staging:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    environment: Staging
+    needs: Development
+
+    env:
+      job_variable: "job value"  
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      #- uses: actions/checkout@v3
+
+      - name: Echoing variables
+        env:
+          step_variable: "step value"  
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo Echoing workflow_variable * $workflow_variable *
+          echo Echoing job_variable * $job_variable * 
+          echo Echoing step_variable * $step_variable * 
+
+      - name: Echoing github context variables
+        run: |
+          echo Echoing github.actor * ${{ github.actor }} *
+          echo Echoing github.base_ref * ${{ github.base_ref }} *
+          echo Echoing github.ref_name * ${{ github.ref_name }} *
+          echo Echoing github.repository * ${{ github.repository }} *
+          echo Echoing github.run_id * ${{ github.run_id }} *
+          echo Echoing github.workflow * ${{ github.workflow }} *
+
+      - name: Echoing vars context variables
+        run: |
+          echo Echoing vars.AVARIABLE * ${{ vars.AVARIABLE }} *
+
+      - name: Echoing secrets context variables
+        run: |
+          echo Echoing secrets.ASECRET * ${{ secrets.ASECRET }} *
+
+
+
