--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -58,10 +58,10 @@ jobs:
         run: |
           echo Echoing secrets.ASECRET * ${{ secrets.ASECRET }} *
       
-      - uses: log_vars_action
 
 
   Staging:
+    if: github.ref_name == 'development'
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     environment: Staging
