--- a/.github/workflows/Pipeline2.yml
+++ b/.github/workflows/Pipeline2.yml
@@ -24,45 +24,10 @@ jobs:
     uses: ./.github/workflows/Deploy_workflow.yml
       with:
         environment: Development
-
+        runif: true
 
   Staging:
-    if: github.ref_name == 'development'
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    environment: Staging
-    needs: Development
-
-    env:
-      job_variable: "job value"  
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      #- uses: actions/checkout@v3
-
-      - name: Echoing variables
-        env:
-          step_variable: "step value"  
-        run: |
-          echo Echoing workflow_variable * $workflow_variable *
-          echo Echoing job_variable * $job_variable * 
-          echo Echoing step_variable * $step_variable * 
-
-      - name: Echoing github context variables
-        run: |
-          echo Echoing github.actor * ${{ github.actor }} *
-          echo Echoing github.base_ref * ${{ github.base_ref }} *
-          echo Echoing github.ref_name * ${{ github.ref_name }} *
-          echo Echoing github.repository * ${{ github.repository }} *
-          echo Echoing github.run_id * ${{ github.run_id }} *
-          echo Echoing github.workflow * ${{ github.workflow }} *
-
-      - name: Echoing vars context variables
-        run: |
-          echo Echoing vars.AVARIABLE * ${{ vars.AVARIABLE }} *
-
-      - name: Echoing secrets context variables
-        run: |
-          echo Echoing secrets.ASECRET * ${{ secrets.ASECRET }} *
-
+    uses: ./.github/workflows/Deploy_workflow.yml
+      with:
+        environment: Staging
+        runif: false #github.ref_name == 'development'
