--- a/.github/workflows/Pipeline2.yml
+++ b/.github/workflows/Pipeline2.yml
@@ -27,6 +27,7 @@ jobs:
         runif: true
 
   Staging:
+    needs: Development
     if: github.ref_name == 'development'
     uses: ./.github/workflows/Deploy_workflow.yml
       with:
