--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -21,6 +21,7 @@ jobs:
   
   # This workflow contains a single job called "build"
   Development:
+    if: false
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     environment: Development
@@ -61,6 +62,7 @@ jobs:
 
 
   Staging:
+    if: false
     if: github.ref_name == 'development'
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
