--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -6,11 +6,11 @@ name: Deploy workflow
 on:
   workflow_call:
     inputs:
-      environment:
+      env_name:
         description: environment to deploy to
         required: true
         type: string
-      runif: 
+      run_if: 
         description: flag indicati
         required: true
         type: bool
@@ -22,11 +22,11 @@ env:
 jobs:
   
   # This workflow contains a single job called "build"
-  Development:
-    if: ${{ inputs.runif }}
+  Echo Variables:
+    if: ${{ inputs.run_if }}
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    environment: ${{ inputs.environment }}
+    environment: ${{ inputs.env_name }}
 
     env:
       job_variable: "job value"  
@@ -61,45 +61,4 @@ jobs:
         run: |
           echo Echoing secrets.ASECRET * ${{ secrets.ASECRET }} *
       
-
-
-  Staging:
-    if: github.ref_name == 'development'
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    environment: Staging
-    needs: Development
-
-    env:
-      job_variable: "job value"  
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      #- uses: actions/checkout@v3
-
-      - name: Echoing variables
-        env:
-          step_variable: "step value"  
-        run: |
-          echo Echoing workflow_variable * $workflow_variable *
-          echo Echoing job_variable * $job_variable * 
-          echo Echoing step_variable * $step_variable * 
-
-      - name: Echoing github context variables
-        run: |
-          echo Echoing github.actor * ${{ github.actor }} *
-          echo Echoing github.base_ref * ${{ github.base_ref }} *
-          echo Echoing github.ref_name * ${{ github.ref_name }} *
-          echo Echoing github.repository * ${{ github.repository }} *
-          echo Echoing github.run_id * ${{ github.run_id }} *
-          echo Echoing github.workflow * ${{ github.workflow }} *
-
-      - name: Echoing vars context variables
-        run: |
-          echo Echoing vars.AVARIABLE * ${{ vars.AVARIABLE }} *
-
-      - name: Echoing secrets context variables
-        run: |
-          echo Echoing secrets.ASECRET * ${{ secrets.ASECRET }} *
 
