--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -63,7 +63,7 @@ jobs:
 
   Staging:
     if: false
-    if: github.ref_name == 'development'
+    #if: github.ref_name == 'development'
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     environment: Staging
