--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -44,6 +44,7 @@ jobs:
           echo Echoing github.repository * ${{ github.repository }} *
           echo Echoing github.run_id * ${{ github.run_id }} *
           echo Echoing github.workflow * ${{ github.workflow }} *
+          echo Echoing inputs.env_name * ${{ inputs.env_name }} *
           echo Echoing vars.AVARIABLE * ${{ vars.AVARIABLE }} *
           echo Echoing secrets.ASECRET * ${{ secrets.ASECRET }} *
       
