--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -19,9 +19,10 @@ jobs:
   
   # This workflow contains a single job called "build"
   EchoVariables:
+    environment: ${{ inputs.env_name }}
+    if: ${{ vars.is_local_env != '' }}
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    environment: ${{ inputs.env_name }}
 
     env:
       job_variable: "job value"  
@@ -46,6 +47,7 @@ jobs:
           echo Echoing github.workflow * ${{ github.workflow }} *
           echo Echoing inputs.env_name * ${{ inputs.env_name }} *
           echo Echoing vars.AVARIABLE * ${{ vars.AVARIABLE }} *
+          echo Echoing vars.is_local_env * ${{ vars.is_local_env }} *
           echo Echoing secrets.ASECRET * ${{ secrets.ASECRET }} *
       
 
