--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -18,7 +18,18 @@ env:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  
+
+  # This workflow contains a single job called "build"
+  PreEchoVariables:
+    environment: Local${{ github.actor }}
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    steps:
+      - name: Pre Echoing variables
+        run: |
+          echo Echoing github.actor * ${{ github.actor }} *
+          echo Echoing vars.is_local_env * ${{ vars.is_local_env }} *
+
   Local:
     uses: ./.github/workflows/Deploy_workflow.yml
     with:
