--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -47,6 +47,7 @@ jobs:
           echo Echoing github.workflow * ${{ github.workflow }} *
           echo Echoing inputs.env_name * ${{ inputs.env_name }} *
           echo Echoing vars.AVARIABLE * ${{ vars.AVARIABLE }} *
+          echo Echoing vars.env_name * ${{ vars.env_name }} *
           echo Echoing vars.is_local_env * ${{ vars.is_local_env }} *
           echo Echoing secrets.ASECRET * ${{ secrets.ASECRET }} *
       
