--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -22,6 +22,8 @@ jobs:
   # This workflow contains a single job called "build"
   PreEchoVariables:
     environment: Local${{ github.actor }}
+    env:
+      env_name: Local${{ github.actor }} 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
