--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -20,7 +20,7 @@ jobs:
   # This workflow contains a single job called "build"
   EchoVariables:
     environment: ${{ inputs.env_name }}
-    if: ${{ vars.is_local_env != '' }}
+    if: ${{ vars.is_local_env }}
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
