--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -21,7 +21,7 @@ jobs:
 
   # This workflow contains a single job called "build"
   PreEchoVariables:
-    environment: Local${{ github.actor }}
+    environment: 'Local${{ github.actor }}'
     env:
       env_name: Local${{ github.actor }} 
     # The type of runner that the job will run on
@@ -30,8 +30,10 @@ jobs:
       - name: Pre Echoing variables
         run: |
           echo Echoing github.actor * ${{ github.actor }} *
+          echo Echoing env.env_name * ${{ env.env_name }} *
           echo Echoing vars.env_name * ${{ vars.env_name }} *
           echo Echoing vars.is_local_env * ${{ vars.is_local_env }} *
+          echo Echoing vars.is_ladida * ${{ vars.is_ladida }} *
 
   Local:
     uses: ./.github/workflows/Deploy_workflow.yml
