--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -46,8 +46,11 @@ jobs:
           echo Echoing github.workflow * ${{ github.workflow }} *
           echo Echoing inputs.env_name * ${{ inputs.env_name }} *
           echo Echoing vars.AVARIABLE * ${{ vars.AVARIABLE }} *
+          echo Echoing inputs.env_name * ${{ inputs.env_name }} *
+          echo Echoing env.env_name * ${{ env.env_name }} *
           echo Echoing vars.env_name * ${{ vars.env_name }} *
           echo Echoing vars.is_local_env * ${{ vars.is_local_env }} *
+          echo Echoing vars.is_ladida * ${{ vars.is_ladida }} *
           echo Echoing secrets.ASECRET * ${{ secrets.ASECRET }} *
       
 
