--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -22,16 +22,16 @@ jobs:
   Local:
     uses: ./.github/workflows/Deploy_workflow.yml
     with:
-      env_name: 'Local${{ github.actor }}'
+      environment_name: 'Local${{ github.actor }}'
 
   Development:
     uses: ./.github/workflows/Deploy_workflow.yml
     with:
-      env_name: Development
+      environment_name: Development
 
   Staging:
     needs: Development
     if: github.ref_name == 'development'
     uses: ./.github/workflows/Deploy_workflow.yml
     with:
-      env_name: Staging
+      environment_name: Staging
