--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -20,7 +20,8 @@ jobs:
   # This workflow contains a single job called "build"
   EchoVariables:
     environment: ${{ inputs.environment_name }}
-    if: ${{ inputs.environment_name }} == ${{ vars.environment_name }}
+    if: false
+    # if: ${{ inputs.environment_name }} == ${{ vars.environment_name }}
     # The type of runner that the job will run on
 
     runs-on: ubuntu-latest
