--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -20,8 +20,7 @@ jobs:
   # This workflow contains a single job called "build"
   EchoVariables:
     environment: ${{ inputs.environment_name }}
-    #if: ${{ inputs.environment_name == vars.environment_name }}
-    # The type of runner that the job will run on
+    if: inputs.environment_name # == vars.environment_name }}
 
     runs-on: ubuntu-latest
     env:
