--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -19,7 +19,7 @@ jobs:
   
   # This workflow contains a single job called "build"
   EchoVariables:
-    environment: ${{ inputs.environment_name }}
+    environment: inputs.environment_name
     if: ${{ vars.environment_name }} # == vars.environment_name }}
 
     runs-on: ubuntu-latest
