--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -20,6 +20,15 @@ env:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
 
+  PreEcho:
+    environment: Development
+    runs-on: ubuntu-latest
+    steps:
+      - name: Echoing variables
+        run: |
+          echo Echoing github.actor * ${{ github.actor }} *
+          echo Echoing vars.environment_name * ${{ vars.environment_name }} *
+
   #Local:
   #  uses: ./.github/workflows/Deploy_workflow.yml
   #  with:
