--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -1,8 +1,5 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CICD Pipeline
 
-# Controls when the workflow will run
 on:
   push:
     branches: 
@@ -14,19 +11,18 @@ on:
       - a_feature
   workflow_dispatch:
 
-env:
-  workflow_variable: "workflow value"  
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
 
   PreEcho:
+    environment: Development
     runs-on: ubuntu-latest
     steps:
       - name: Echoing variables
         run: |
           echo Echoing github.actor * ${{ github.actor }} *
           echo Echoing used local environment_name * Local${{ github.actor }} *
+          echo Echoing Development vars.ENVIRONMENT_NAME * ${{ vars.ENVIRONMENT_NAME }} *
 
   Local:
     uses: ./.github/workflows/Deploy_workflow.yml
