--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   
   EchoVariables:
-    environment: inputs.environment_name
+    environment: '${{ inputs.environment_name }}'
     runs-on: ubuntu-latest
     steps:
       - name: Echoing variables
@@ -21,7 +21,7 @@ jobs:
           echo Echoing vars.ENVIRONMENT_NAME * ${{ vars.ENVIRONMENT_NAME }} *
       
   Deploy:
-    environment: inputs.environment_name
+    environment: '${{ inputs.environment_name }}'
     if: ${{ vars.ENVIRONMENT_NAME }} == ${{ inputs.environment_name }}
     runs-on: ubuntu-latest
     steps:
