--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -22,7 +22,7 @@ jobs:
       
   Deploy:
     environment: '${{ inputs.environment_name }}'
-    if: vars.ENVIRONMENT_NAME == inputs.environment_name
+    if: ${{ vars.ENVIRONMENT_NAME == inputs.environment_name }}
     runs-on: ubuntu-latest
     steps:
       - name: Echo
