--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -12,6 +12,8 @@ jobs:
   
   EchoVariables:
     environment: '${{ inputs.environment_name }}'
+    env:
+      do_deploy1: ${{ vars.ENVIRONMENT_NAME == inputs.environment_name }}
     runs-on: ubuntu-latest
     steps:
       - name: Echoing variables
@@ -19,6 +21,7 @@ jobs:
           echo Echoing github.actor * ${{ github.actor }} *
           echo Echoing inputs.environment_name * ${{ inputs.environment_name }} *
           echo Echoing vars.ENVIRONMENT_NAME * ${{ vars.ENVIRONMENT_NAME }} *
+          echo Echoing env.do_deploy1 * ${{ env.do_deploy1 }} *
       
   Deploy:
     environment: '${{ inputs.environment_name }}'
