--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -9,6 +9,8 @@ on:
         type: string
 
 jobs:
+  env:
+    do_deploy2: ${{ vars.ENVIRONMENT_NAME == inputs.environment_name }}
   
   EchoVariables:
     environment: '${{ inputs.environment_name }}'
@@ -22,10 +24,11 @@ jobs:
           echo Echoing inputs.environment_name * ${{ inputs.environment_name }} *
           echo Echoing vars.ENVIRONMENT_NAME * ${{ vars.ENVIRONMENT_NAME }} *
           echo Echoing env.do_deploy1 * ${{ env.do_deploy1 }} *
+          echo Echoing env.do_deploy2 * ${{ env.do_deploy2 }} *
       
   Deploy:
     environment: '${{ inputs.environment_name }}'
-    if: ${{ vars.ENVIRONMENT_NAME == inputs.environment_name }}
+    if: {{ env.do_deploy2 }}
     runs-on: ubuntu-latest
     steps:
       - name: Echo
