--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   env:
     do_deploy2: ${{ vars.ENVIRONMENT_NAME == inputs.environment_name }}
-  
+
   EchoVariables:
     environment: '${{ inputs.environment_name }}'
     env:
@@ -28,7 +28,7 @@ jobs:
       
   Deploy:
     environment: '${{ inputs.environment_name }}'
-    if: {{ env.do_deploy2 }}
+    if: ${{ env.do_deploy2 }}
     runs-on: ubuntu-latest
     steps:
       - name: Echo
