--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -22,13 +22,11 @@ jobs:
           echo Echoing inputs.environment_name * ${{ inputs.environment_name }} *
           echo Echoing vars.ENVIRONMENT_NAME * ${{ vars.ENVIRONMENT_NAME }} *
           echo Echoing env.do_deploy1 * ${{ env.do_deploy1 }} *
-          echo Echoing env.do_deploy2 * ${{ env.do_deploy2 }} *
+          echo Echoing env.do_deploy2 * ${{ vars.ENVIRONMENT_NAME == inputs.environment_name }} *
       
   Deploy:
     environment: '${{ inputs.environment_name }}'
-    env:
-      do_deploy2: ${{ vars.ENVIRONMENT_NAME == inputs.environment_name }}
-    if: ${{ env.do_deploy2 }}
+    if: ${{ vars.ENVIRONMENT_NAME == inputs.environment_name }}
     runs-on: ubuntu-latest
     steps:
       - name: Echo
