--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -26,7 +26,7 @@ jobs:
       
   Deploy:
     environment: '${{ inputs.environment_name }}'
-    if: ${{ 'Development' == 'Development' }}
+    if: 'Development' == 'Development'
     runs-on: ubuntu-latest
     steps:
       - name: Echo
