--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -10,17 +10,17 @@ on:
 
 jobs:
 
-  EchoVariables:
-    environment: '${{ inputs.environment_name }}'
-    env:
-      do_deploy1: ${{ vars.ENVIRONMENT_NAME == inputs.environment_name }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Echoing variables
-        run: |
-          echo Echoing github.actor * ${{ github.actor }} *
-          echo Echoing inputs.environment_name * ${{ inputs.environment_name }} *
-          echo Echoing vars.ENVIRONMENT_NAME * ${{ vars.ENVIRONMENT_NAME }} *
+  #EchoVariables:
+  #  environment: '${{ inputs.environment_name }}'
+  #  env:
+  #    do_deploy1: ${{ vars.ENVIRONMENT_NAME == inputs.environment_name }}
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #    - name: Echoing variables
+  #      run: |
+  #        echo Echoing github.actor * ${{ github.actor }} *
+  #        echo Echoing inputs.environment_name * ${{ inputs.environment_name }} *
+  #        echo Echoing vars.ENVIRONMENT_NAME * ${{ vars.ENVIRONMENT_NAME }} *
       
   Deploy:
     environment: '${{ inputs.environment_name }}'
@@ -29,5 +29,6 @@ jobs:
       - name: Echo
         run: |
           echo Deploying to ${{ inputs.environment_name }} ...
+          echo Environment variable vars.ENVIRONMENT_NAME has value * ${{ vars.ENVIRONMENT_NAME }} *
 
 
