--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -3,12 +3,12 @@ name: CICD Pipeline
 on:
   push:
     branches: 
-      - development 
-      - a_feature
+      - development
+      - 'feature/**'
   pull_request:
     branches: 
       - development
-      - a_feature
+      - 'feature/**'
   workflow_dispatch:
 
 
