--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -10,20 +10,41 @@ on:
 
 jobs:
 
-  #EchoVariables:
-  #  environment: '${{ inputs.environment_name }}'
-  #  env:
-  #    do_deploy1: ${{ vars.ENVIRONMENT_NAME == inputs.environment_name }}
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - name: Echoing variables
-  #      run: |
-  #        echo Echoing github.actor * ${{ github.actor }} *
-  #        echo Echoing inputs.environment_name * ${{ inputs.environment_name }} *
-  #        echo Echoing vars.ENVIRONMENT_NAME * ${{ vars.ENVIRONMENT_NAME }} *
+  CheckEnvironment:
+    environment: '${{ inputs.environment_name }}'
+    runs-on: ubuntu-latest
+    outputs:
+      environment-ok: ${{ steps.my-environment-check.outputs.defined }}
+    steps:
+      - name: Check for Environment availability
+        id: my-environment-check
+        # perform check & put boolean result as an output
+        shell: bash
+        run: |
+          if [ "${{ vars.ENVIRONMENT_NAME }}" != '' ]; then
+            echo "defined=true" >> $GITHUB_OUTPUT;
+          else
+            echo "defined=false" >> $GITHUB_OUTPUT;
+          fi
+
+  EchoVariables:
+    environment: '${{ inputs.environment_name }}'
+    needs: [CheckEnvironment]
+    env:
+      do_deploy1: ${{ vars.ENVIRONMENT_NAME == inputs.environment_name }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Echoing variables
+        run: |
+          echo Echoing github.actor * ${{ github.actor }} *
+          echo Echoing environment-ok * ${{ needs.CheckEnvironment.outputs.environment-ok }} *
+          echo Echoing inputs.environment_name * ${{ inputs.environment_name }} *
+          echo Echoing vars.ENVIRONMENT_NAME * ${{ vars.ENVIRONMENT_NAME }} *
       
   Deploy:
     environment: '${{ inputs.environment_name }}'
+    needs: [CheckEnvironment]
+    if: needs.CheckEnvironment.outputs.environment-ok == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Echo
