--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -14,15 +14,15 @@ on:
 
 jobs:
 
-  #PreEcho:
-  #  environment: 'Local${{ github.actor }}'
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - name: Echoing variables
-  #      run: |
-  #        echo Echoing github.actor * ${{ github.actor }} *
-  #        echo Echoing used local environment_name * Local${{ github.actor }} *
-  #        echo Echoing Development vars.ENVIRONMENT_NAME * ${{ vars.ENVIRONMENT_NAME }} *
+  PreEcho:
+    environment: 'Local${{ github.actor }}'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Echoing variables
+        run: |
+          echo Echoing github.actor * ${{ github.actor }} *
+          echo Echoing used local environment_name * Local${{ github.actor }} *
+          echo Echoing Development vars.ENVIRONMENT_NAME * ${{ vars.ENVIRONMENT_NAME }} *
 
   Local:
     uses: ./.github/workflows/Deploy_workflow.yml
