--- a/.github/workflows/Azure Connect.yml
+++ b/.github/workflows/Azure Connect.yml
@@ -14,6 +14,12 @@ jobs:
         uses: azure/login@v1
         with:
           creds: '${{ secrets.AZURE_CREDENTIALS }}'
+      - name: Azure CLI script
+        uses: azure/CLI@v1
+        with:
+          azcliversion: 2.0.72
+          inlineScript: |
+            az account show
       - name: Azure PowerShell Action
         uses: Azure/powershell@v1
         with:
