--- a/k8s_manifest_templates/rap-ingress-template.yaml
+++ b/k8s_manifest_templates/rap-ingress-template.yaml
@@ -1,8 +1,14 @@
+# Variables:
+#   rap_name          : ${rap_name}
+#                     : rap
+#   rap_domain        : ${rap_domain} 
+#                     : rap.tarski.nl
+
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: rap-ingress
-  namespace: rap
+  name: ${rap_name}-ingress
+  namespace: ${rap_name}
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
@@ -10,15 +16,15 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-        - rap.tarski.nl
-      secretName: rap-tls
+        - ${rap_domain}
+      secretName: ${rap_name}-tls
   rules:
-    - host: rap.tarski.nl
+    - host: ${rap_domain}
       http:
         paths:
           - pathType: ImplementationSpecific
             backend:
               service:
-                name: rap
+                name: ${rap_name}
                 port:
                   number: 80
