--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -42,6 +42,8 @@ jobs:
           echo Echoing environment-ok * ${{ needs.CheckEnvironment.outputs.environment-ok }} *
           echo Echoing github.workspace * ${{ github.workspace }} *
           echo Echoing runner.temp * ${{ runner.temp }} *
+          echo Echoing vars.enroll_name * ${{ vars.enroll_name }} *
+          echo Echoing vars.domain_name * ${{ vars.domain_name }} *
       - uses: actions/checkout@v3      
       - name: Deploy steps
         run: |
