--- a/.github/workflows/Deploy_workflow.yml
+++ b/.github/workflows/Deploy_workflow.yml
@@ -49,6 +49,8 @@ jobs:
         run: |
           echo Deploying to ${{ inputs.environment_name }} ...
           echo Environment variable vars.ENVIRONMENT_NAME has value * ${{ vars.ENVIRONMENT_NAME }} *
+          set ENROLL_NAME ${{ vars.enroll_name }}
+          set DOMAIN_NAME ${{ vars.domain_name }}
           envsubst < ${{ github.workspace }}/k8s_manifest_templates/enroll-ingress-template.yaml > ${{ runner.temp }}/enroll-ingress-template.yaml
           cat ${{ runner.temp }}//enroll-ingress-template.yaml
 
