--- a/k8s_manifest_templates/enroll-ingress-template.yaml
+++ b/k8s_manifest_templates/enroll-ingress-template.yaml
@@ -8,7 +8,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: enroll-ingress
-  namespace: ${enroll_name}
+  namespace: ${ENROLL_NAME}
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
@@ -16,16 +16,16 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-        - ${enroll_name}.${rap_domain}
-      secretName: ${enroll_name}-tls
+        - ${ENROLL_NAME}.${rap_domain}
+      secretName: ${ENROLL_NAME}-tls
   rules:
-    - host: ${enroll_name}.${rap_domain}
+    - host: ${ENROLL_NAME}.${DOMAIN_NAME}
       http:
         paths:
           - pathType: ImplementationSpecific
             backend:
               service:
-                name: enroll
+                name: ${ENROLL_NAME}
                 port:
                   number: 80
 
