--- a/.github/workflows/CICD_Pipeline.yml
+++ b/.github/workflows/CICD_Pipeline.yml
@@ -11,6 +11,8 @@ on:
       - 'feature/**'
   workflow_dispatch:
 
+env:
+  frankies_secret: ${{ secrets.FRANKIES_SECRET }}
 
 jobs:
 
@@ -19,7 +21,7 @@ jobs:
     uses: ./.github/workflows/Deploy_workflow.yml
     with:
       environment_name: 'Local${{ github.actor }}'
-      frankies_secret: '${{ secrets.FRANKIES_SECRET }}'
+      frankies_secret: '${{ env.FRANKIES_SECRET }}'
 
   Development:
     if: github.ref_name == 'development'
