--- a/.github/workflows/PlayWithSecrets.yml
+++ b/.github/workflows/PlayWithSecrets.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           import os
           data = open("file", "w")
-          for q in (os.getenv("MY_VAL")):
+          for q in (os.getenv("env_frankies_secret")):
             print(q)
             data.write(q)
         shell: python
