--- a/.github/workflows/PlayWithSecrets.yml
+++ b/.github/workflows/PlayWithSecrets.yml
@@ -12,7 +12,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  GetVariablesAndSecrets:
+  GetVariablesAndSecretsDirectly:
     environment: LocalFrankTeusink
     runs-on: ubuntu-latest
     env:
@@ -35,3 +35,8 @@ jobs:
             print(q)
             data.write(q)
         shell: python
+
+  GetVariablesAndSecretsInSubCall:
+    uses: ./.github/workflows/Deploy_workflow.yml
+    with:
+      environment_name: 'Local${{ github.actor }}'
