--- a/.github/workflows/PlayWithSecrets.yml
+++ b/.github/workflows/PlayWithSecrets.yml
@@ -37,6 +37,7 @@ jobs:
         shell: python
 
   GetVariablesAndSecretsInSubCall:
-    uses: ./.github/workflows/Deploy_workflow.yml
+    uses: ./.github/workflows/PlayWithSecretsSubcall.yml
     with:
-      environment_name: 'Local${{ github.actor }}'
+      enroll_name: ${{ vars.enroll_name }}
+      frankies_secret: ${{ secrets.FRANKIES_SECRET}}
