--- a/.github/workflows/PlayWithSecretsSubcall.yml
+++ b/.github/workflows/PlayWithSecretsSubcall.yml
@@ -3,9 +3,9 @@ name: Play With Secrets Subcall
 on:  
   workflow_call:
     inputs:
-      environment_name:
+      enroll_name:
         description: Name of the environment to which is deployed
-        required: true
+        required: false
         type: string
       frankies_secret:
         description: frankies secret
@@ -13,45 +13,15 @@ on:
         type: string
 
 jobs:
-
-  CheckEnvironment:
-    environment: '${{ inputs.environment_name }}'
-    runs-on: ubuntu-latest
-    outputs:
-      environment-ok: ${{ steps.my-environment-check.outputs.defined }}
-    steps:
-      - name: Check for Environment availability
-        id: my-environment-check
-        # perform check & put boolean result as an output
-        shell: bash
-        run: |
-          if [ "${{ vars.ENVIRONMENT_NAME }}" == ${{ inputs.environment_name }} ]; then
-            echo "defined=true" >> $GITHUB_OUTPUT;
-          else
-            echo "defined=false" >> $GITHUB_OUTPUT;
-          fi
-
-  Deploy:
-    environment: '${{ inputs.environment_name }}'
+  ProcessCall:
+    environment: LocalFrankTeusink
     env:
-      ENROLL_NAME: ${{ vars.enroll_name }}
-      RAP_NAME: ${{ vars.rap_name }}
-      DOMAIN_NAME: ${{ vars.domain_name }}
-      XXX: ${{ inputs.FRANKIES_SECRET }}
-    needs: [CheckEnvironment]
-    if: needs.CheckEnvironment.outputs.environment-ok == 'true'
+      enroll_name: ${{ inputs.enroll_name }}
+      env_frankies_secret: ${{ inputs.FRANKIES_SECRET }}
     runs-on: ubuntu-latest
     steps:
       - name: Echoing variables
         run: |
-          echo Echoing vars.ENVIRONMENT_NAME: ${{ vars.ENVIRONMENT_NAME }}
-          echo Echoing inputs.FRANKIES_SECRET: ${{ inputs.FRANKIES_SECRET }}
-          echo Echoing secrets.FRANKIES_SECRET: ${{ secrets.FRANKIES_SECRET }}
-          echo Echoing env.XXX: ${{ env.XXX }}
-      - uses: actions/checkout@v3      
-      - name: Deploy steps
-        run: |
-          echo Deploying to ${{ inputs.environment_name }} ...
-          echo Environment variable vars.ENVIRONMENT_NAME has value * ${{ vars.ENVIRONMENT_NAME }} *
-          envsubst < ${{ github.workspace }}/k8s_manifest_templates/enroll-ingress-template.yaml > ${{ runner.temp }}/enroll-ingress-template.yaml
-          cat ${{ runner.temp }}//enroll-ingress-template.yaml
+          echo Echoing vars.enroll_name: ${{ vars.enroll_name }}
+          echo Echoing inputs.enroll_name: ${{ inputs.enroll_name }}
+          echo Echoing inputs.enroll_name: ${{ inputs.enroll_name }}
