--- a/.github/workflows/PlayWithSecrets.yml
+++ b/.github/workflows/PlayWithSecrets.yml
@@ -11,6 +11,9 @@ on:
       - 'feature/**'
   workflow_dispatch:
 
+env:
+  env_frankies_secret: ${{ secrets.FRANKIES_SECRET}}
+
 jobs:
   GetVariablesAndSecretsDirectly:
     environment: LocalFrankTeusink
@@ -40,4 +43,4 @@ jobs:
     uses: ./.github/workflows/PlayWithSecretsSubcall.yml
     with:
       enroll_name: ${{ vars.enroll_name }}
-      frankies_secret: ${{ secrets.FRANKIES_SECRET}}
+      frankies_secret: ${{ env.env_frankies_secret}}
