--- a/.github/workflows/PlayWithSecrets.yml
+++ b/.github/workflows/PlayWithSecrets.yml
@@ -43,4 +43,4 @@ jobs:
     uses: ./.github/workflows/PlayWithSecretsSubcall.yml
     with:
       enroll_name: ${{ vars.enroll_name }}
-      frankies_secret: ${{ env.env_frankies_secret}}
+      frankies_secret: ${{ env_frankies_secret}}
