--- a/.github/workflows/PlayWithSecrets.yml
+++ b/.github/workflows/PlayWithSecrets.yml
@@ -18,8 +18,8 @@ jobs:
   GetVariablesAndSecretsDirectly:
     environment: LocalFrankTeusink
     runs-on: ubuntu-latest
-    env:
-      env_frankies_secret: ${{ secrets.FRANKIES_SECRET}}
+    # env:
+    #  env_frankies_secret: ${{ secrets.FRANKIES_SECRET}}
     steps:
       - name: Get from Environment
         env:
